<resources>
    <string name="app_name">Translator</string>
    <string name="happy_birthday_noel">Happy Birthday, Noel</string>
    <string name="from_lloyd">From lloyd</string>
    <string name="todo">TODO</string>
    <string name="hello_world">hello world</string>
    <string name="button">roll</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirmpassword_hint">Confirm Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_surname_hint">Surname</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="sign_in">SignIn</string>
    <string name="login">SignIn</string>
    <string name="register1">SignUp</string>
    <string name="signup1">Signup</string>
    <string name="have_account">Already have an account.SignIn</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="_todo">TODO</string>
    <string name="open_gallery">open gallery</string>
    <string name="take_photo">take photo</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="about_us">about us</string>
    <string name="logout">logout</string>
    <string name="upload_project">upload project</string>
    <string name="my_project">my project</string>
    <string name="shortcuts">My Shortcuts</string>
    <string name="textview">TextView</string>
    <string name="textview15">Airtime</string>
</resources>