<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/whiteTextColor"
    android:orientation="vertical">

  <ImageView
    android:id="@+id/upload_photo"
      android:layout_marginTop="10dp"
      android:layout_marginStart="70dp"
      android:layout_margin="8dp"
      android:layout_height="70dp"
      android:layout_width="100dp"
      android:contentDescription="@string/_todo"

      />



        <Button
            android:id="@+id/gallery"
            style="@style/UploadPhoto"
            android:layout_marginLeft="20dp"
            android:layout_margin="8dp"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:text="@string/open_gallery" />

        <Button
        android:id="@+id/camera"
        style="@style/UploadPhoto"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/take_photo" />



</LinearLayout>





