<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".login.SignUp"
    android:focusableInTouchMode="true"
    android:layout_height="wrap_content" android:layout_width="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"



        >

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register1" />


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:hint="@string/login_name_hint"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp" />


    <EditText
        android:id="@+id/editTextsurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_person"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/login_surname_hint"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:textColor="@color/greyHex" />


    <EditText
        android:id="@+id/editTextMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_phone"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/login_mobile_number_hint"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:textColor="@color/greyHex" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_email"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:textColor="@color/greyHex" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_lock"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:textColor="@color/greyHex"

        />


    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:hint="@string/login_confirmpassword_hint"
        android:background="@drawable/custom_input"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:textColor="@color/greyHex" />


        <Button
            android:id="@+id/cirSignUpButton"
            style="@style/loginButton"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup1" />

        <TextView
            android:id="@+id/have_account"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/have_account"
            android:textAlignment="textEnd"
            android:textColor="@color/greyHex"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>