<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeHome"
    android:layout_width="match_parent"
     android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="Investors"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="24dp"
                android:paddingTop="16dp"
        >


                <ImageView
                    android:layout_width="278dp"
                    android:layout_height="229dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/home" />

                <TextView
                    android:layout_width="158dp"
                    android:layout_height="61dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="132dp"
                    android:text="@string/welcome"
                    android:textStyle="italic"
                    android:textAllCaps="true"
                    android:textSize="30sp" />


        <Button
            android:id="@+id/signin"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="250dp"
            android:text="@string/signin" />

        <Button
                    android:id="@+id/signup_button"
                    style="@style/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginBottom="200dp"
                    android:text="@string/signup" />



            </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>