<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".WelcomeHome"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="414dp"
            android:layout_height="182dp"
            android:layout_marginTop="10dp"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="156dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:contentPadding="2dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="112dp"
                        android:layout_height="69dp"
                        android:layout_marginTop="7dp"
                        android:contentDescription="TODO"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/textview"

                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="281dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:text="@string/shortcuts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="238dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="361dp"
            android:layout_height="191dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="179dp"
                    android:layout_height="42dp"

                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="56dp"
                    android:text="Home Internet"
                    app:layout_constraintEnd_toStartOf="@+id/imageButton"
                    app:layout_constraintTop_toTopOf="@+id/view" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="Airtime"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.26"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="28dp"
                    android:background="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="43dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="48dp"
                    android:background="@color/whiteCardColor"
                    app:layout_constraintEnd_toStartOf="@+id/textView7"
                    app:layout_constraintHorizontal_bias="0.128"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_drawable_phone" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:background="@color/whiteCardColor"
                    app:layout_constraintBottom_toTopOf="@+id/imageButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.884"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.061"
                    app:srcCompat="@drawable/ic_arrow_forward" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/whiteCardColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.884"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.652"
                    app:srcCompat="@drawable/ic_arrow_forward" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="269dp"
            android:layout_height="25dp"
            android:layout_marginTop="36dp"
            android:text="Bills and utilities"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.197"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="281dp"
            android:layout_height="39dp"
            android:layout_marginTop="23dp"
            android:text="My Network Service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.215"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/whiteCardColor"
            android:text="Econet"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/button3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="56dp"
            android:background="@color/whiteCardColor"
            android:text="Netone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="114dp"
            android:background="@color/whiteCardColor"
            android:text="Telecel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button3" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="140dp"
            android:layout_height="16dp"
            android:layout_marginTop="24dp"
            android:text="My Bank Services"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="273dp"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:paddingStart="20dp"
            android:hint="type to enter bank"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>